# lecture-assistant

./: .gitignore  CLAUDE.md  LICENSE  MIGRATE_REVIEW_PAGE.md  README.md  REDESIGN.md  REVIEW_UI_DESIGN.md  config.example.yaml  pyproject.toml  requirements.txt  run.py  setup_env.bat  start.bat  test_pipeline.py
.github/workflows/: ci.yml
.nicegui/: storage-user-045ccf72-122c-4177-82be-654ee0bc2a2a.json  storage-user-8fba4209-f02a-4d75-a05e-ddfbe9d0dfe3.json  storage-user-dea73f05-b8c4-4bf9-bee1-5b1889179c83.json
.streamlit/: config.toml
assets/: review.html
nicegui_app/: main.py  state.py
nicegui_app/components/: sidebar.py  theme.py
nicegui_app/pages/: material_input.py  review_qa.py
pages/: 1_资料录入.py  2_复习与问答.py
prompts/en/: qa_system.txt  review_generation.txt  summary.txt
prompts/zh/: qa_system.txt  review_generation.txt  summary.txt  transcript_correction.txt
src/: __init__.py  config.py  course_manager.py
src/api/: __init__.py  review_api.py
src/asr/: __init__.py  base.py  funasr_asr.py
src/i18n/: __init__.py  en.json  zh.json
src/knowledge/: __init__.py  base.py  chroma_store.py  chunker.py  embedder.py
src/llm/: __init__.py  base.py  deepseek_llm.py  factory.py  openai_llm.py
src/merger/: __init__.py  content_merger.py
src/parser/: __init__.py  base.py  epub_parser.py  mineru_parser.py  ppt_extractor.py
src/search/: web_search.py
src/ui/: session_state.py  sidebar.py  theme.py
tests/: conftest.py  test_chroma_store.py  test_chunker.py  test_config.py  test_course_manager.py  test_embedder.py  test_epub_parser.py  test_llm.py  test_merger.py
