[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lecture-assistant"
version = "0.1.0"
description = "课堂录音转文字 + 课件解析 + AI 复习资料生成 + 智能问答"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.0",
    "funasr>=1.0.0",
    "modelscope>=1.14.0",
    "magic-pdf>=1.0.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.4.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=0.6.0",
    "olefile>=0.46",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "torchaudio>=2.0.0",
    "ebooklib>=0.17",
    "html2text>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

# ---- ruff (linter + formatter + import sort) ----

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "data", "tools", "__pycache__", "test_pipeline.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes (unused imports, undefined names)
    "I",     # isort (import ordering)
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade (modern Python syntax)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "nicegui_app"]

[tool.ruff.format]
quote-style = "double"

# ---- mypy (static type checking) ----

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
files = ["src/", "nicegui_app/"]
exclude = ["\\.venv/", "data/", "tools/"]

# ---- pytest ----

[tool.pytest.ini_options]
testpaths = ["tests"]
